--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^2.1.1",
     "file-loader": "^3.0.1",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
@@ -33,8 +34,10 @@
   },
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "html-withimg-loader": "^0.1.16",
     "mint-ui": "^2.2.13",
     "vue": "^2.6.10",
+    "vue-resource": "^1.5.1",
     "vue-router": "^3.0.2"
   }
 }
