--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "webpack.config.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --open --hot --port 3000 "
+    "dev": "webpack-dev-server --open --hot "
   },
   "keywords": [],
   "author": "",
